--- a/package.json
+++ b/package.json
@@ -33,12 +33,15 @@
 		"passport-linkedin": "~0.1.3",
 		"passport-google-oauth": "~0.1.5",
 		"passport-github": "~0.1.5",
+		"passport-soundcloud": "~0.1.2",
+		"passport-spotify": "~0.1.0",
 		"lodash": "~2.4.1",
 		"forever": "~0.11.0",
 		"bower": "~1.3.8",
 		"grunt-cli": "~0.1.13",
 		"glob": "~4.0.5",
 		"async": "~0.9.0",
+		"request": "~2.48.0",
 		"nodemailer": "~1.1.1"
 	},
 	"devDependencies": {
